Incorporate new test file which for confirm tests
This requires defining a namespace around the test class to prevent name
clashes with tests in different files. Without the namespace we have two
tests named "Test4" and instantiated as "test4" - since there is a TEST
macro on line 4 of both "Creation.cc" and "Confirm.cc". Wrapping the
classes in an unnamed namespace ensures there is no name clash when
linking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(MereTDD)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(MereTDD tests/main.cc tests/Creation.cc)
+add_executable(MereTDD tests/main.cc tests/Creation.cc tests/Confirm.cc)
